# E-commerce-Project

./: compose.yml  getway-initializer.sh
inventory-service/: Dockerfile  pyproject.toml
inventory-service/app/: main.py
inventory-service/app/controllers/: stock_controller.py
inventory-service/app/models/: stock_model.py
inventory-service/app/routes/: inventory_routes.py
notification-service/: .env.example  Dockerfile  pyproject.toml
notification-service/app/: main.py  settings.py
notification-service/app/controllers/: custom_notification.py  notification_controller.py  order_notification.py  payment_notification.py  send_notification.py  user_notification.py
notification-service/app/db/: db_connector.py
notification-service/app/kafka/: notification_consumers.py
notification-service/app/models/: email_template.py
notification-service/app/routes/: notification_routes.py
notification-service/app/tasks/: background_tasks.py
notification-service/app/utils/: boto_config.py
order-service/: .env.example  Dockerfile  pyproject.toml
order-service/app/: main.py  settings.py
order-service/app/controllers/: cart_crud_controllers.py  order_components.py  order_crud_controllers.py
order-service/app/kafka/: kafka_producers.py
payment-service/: Dockerfile  pyproject.toml
payment-service/app/: main.py  settings.py
product-service/: .env.example  Dockerfile  pyproject.toml
product-service/app/: main.py  settings.py
user-service/: .env.example  Dockerfile  pyproject.toml
user-service/app/: main.py  settings.py  user.proto
(+37 files in other folders)
